# ssmk

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  context.cpp  main.cpp
src/cli/: CMakeLists.txt
src/cli/include/ssmk/cli/: application.hpp  context.hpp  version.hpp.in
src/cli/src/: main.cpp  options.cpp
src/cli/src/cli/: application.cpp  options.cpp  run.cpp
src/include/ssmk/: context.hpp
src/ssmk/: CMakeLists.txt
src/ssmk/include/ssmk/: context.hpp  exceptions.hpp  sprite.hpp  ssmk.hpp  version.hpp.in
src/ssmk/src/: context.cpp  fillContext.cpp  findFiles.cpp  packImages.cpp  readConfig.cpp  readImageHeaders.cpp  sprite.cpp  writeImages.cpp
src/ssmk/tests/: CMakeLists.txt  configDirectoryIsAFile.cpp  findConfig.cpp  findFiles-noSprites.cpp  noConfig.cpp  readConfig-configDirectoryIsAFile.cpp  readConfig-negativeKPacking.cpp  readConfig-noConfig.cpp  readConfig-treeFitIncreasingPacking.cpp  readConfig.cpp
src/ssmk/tests/projects/ex1/: ssmk.toml
src/ssmk/tests/projects/negativeKPacking/: ssmk.toml
src/ssmk/tests/projects/nosprites/: ssmk.toml
src/ssmk/tests/projects/treeFitIncreasingPacking/: ssmk.toml
